syntax = "proto3";
package file;
option go_package = "./pb";
import "services/error/pb/error.proto";

service FileService{
  rpc UploadAvatar(UploadAvatarRequest) returns (UploadAvatarResponse);
  rpc UploadAsset(stream UploadAssetRequest) returns (stream UploadAssetResponse);
}
message File {
  string fileName = 1;
  int64 size = 2;
  bytes content = 3;
  string folder = 4;
}
message UploadAvatarRequest {
  File file = 1;
}

message UploadAvatarResponse {
  string url = 1;
  error.ErrorResponse error = 2;
}

message UploadAssetRequest {
  File file = 1;
}
message Video {
  int64 duration = 1;
  string unit = 2;

}
message UploadAssetResponse {
  string url = 1;
  Video video = 2;

  error.ErrorResponse error = 3;
}


